# book_recommendations_atomic

./: .gitignore  README.md  hello.py  pyproject.toml
docs/: architecture.md  book_agent_design.md  cross_domain_media_agent_design.md  dev_notes.md
src/agents/: __init__.py  base.py  book_agent.py  config.py  media_agent.py
src/cli/: main.py  media_formatter.py
src/logging/: logger.py
src/schemas/: __init__.py  book_schemas.py  media_schemas.py
src/tracing/: __init__.py  langsmith_tracker.py
