[project]
name = "book-recommendations-atomic"
version = "0.1.0"
description = "A book recommendation system built using the Atomic Agents framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atomic-agents>=1.0.17",
    "instructor>=1.7.2",
    "openai>=1.60.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]
